--- a/models.ipynb
+++ b/models.ipynb
@@ -1417,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1426,14 +1426,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The ATE AIPTW is 0.5669477267721126 with a std = 0.013952336164497843\n"
+      "The ATE AIPTW is -0.023626239510519963 with a std = 0.0036096220668234516\n"
      ]
     }
    ],
@@ -1444,7 +1444,7 @@
     "# AIPW for Good for 5-10% inflation predictors compared to 0-5%\n",
     "data_and_nuisance_estimates_xgb = pd.DataFrame(\n",
     "    {'g': g_cond[:,1], 'Q_control': Q0[:,2], 'Q_treat': Q1[:,2],\n",
-    "    'A': data_xgboost[\"treatment_bins\"], 'Y': data_xgboost[\"durable_purchase\"]})\n",
+    "    'A': data_xgboost[\"treatment_bins_1.0\"], 'Y': data_xgboost[\"durable_purchase_2\"]})\n",
     "tau_hat, std_hat = ate_aiptw(**data_and_nuisance_estimates_xgb)\n",
     "print(f\"The ATE AIPTW is {tau_hat} with a std = {std_hat}\")\n",
     "\n",
@@ -1453,26 +1453,257 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['durable_purchase_0', 'durable_purchase_1', 'durable_purchase_2']"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[outcome for outcome in outcomes]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['0', '1', '2']"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[outcome[-1] for outcome in outcomes]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>outcome</th>\n",
+       "      <th>treatment</th>\n",
+       "      <th>ATE</th>\n",
+       "      <th>std</th>\n",
+       "      <th>95% significant</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Negative</td>\n",
+       "      <td>5-10% inflation</td>\n",
+       "      <td>0.0213</td>\n",
+       "      <td>0.0034</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Negative</td>\n",
+       "      <td>10-15% inflation</td>\n",
+       "      <td>0.0556</td>\n",
+       "      <td>0.0115</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Negative</td>\n",
+       "      <td>15-20% inflation</td>\n",
+       "      <td>-0.0002</td>\n",
+       "      <td>0.0448</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Negative</td>\n",
+       "      <td>20+% inflation</td>\n",
+       "      <td>-0.0068</td>\n",
+       "      <td>0.0653</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Neutral</td>\n",
+       "      <td>5-10% inflation</td>\n",
+       "      <td>0.0023</td>\n",
+       "      <td>0.0017</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Neutral</td>\n",
+       "      <td>10-15% inflation</td>\n",
+       "      <td>-0.0091</td>\n",
+       "      <td>0.0038</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Neutral</td>\n",
+       "      <td>15-20% inflation</td>\n",
+       "      <td>0.0038</td>\n",
+       "      <td>0.0248</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Neutral</td>\n",
+       "      <td>20+% inflation</td>\n",
+       "      <td>-0.0124</td>\n",
+       "      <td>0.0088</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Positive</td>\n",
+       "      <td>5-10% inflation</td>\n",
+       "      <td>-0.0236</td>\n",
+       "      <td>0.0036</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Positive</td>\n",
+       "      <td>10-15% inflation</td>\n",
+       "      <td>-0.0465</td>\n",
+       "      <td>0.0116</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Positive</td>\n",
+       "      <td>15-20% inflation</td>\n",
+       "      <td>-0.0036</td>\n",
+       "      <td>0.0486</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Positive</td>\n",
+       "      <td>20+% inflation</td>\n",
+       "      <td>0.0193</td>\n",
+       "      <td>0.0654</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     outcome         treatment     ATE     std 95% significant\n",
+       "0   Negative   5-10% inflation  0.0213  0.0034             Yes\n",
+       "1   Negative  10-15% inflation  0.0556  0.0115             Yes\n",
+       "2   Negative  15-20% inflation -0.0002  0.0448              No\n",
+       "3   Negative    20+% inflation -0.0068  0.0653              No\n",
+       "4    Neutral   5-10% inflation  0.0023  0.0017              No\n",
+       "5    Neutral  10-15% inflation -0.0091  0.0038             Yes\n",
+       "6    Neutral  15-20% inflation  0.0038  0.0248              No\n",
+       "7    Neutral    20+% inflation -0.0124  0.0088              No\n",
+       "8   Positive   5-10% inflation -0.0236  0.0036             Yes\n",
+       "9   Positive  10-15% inflation -0.0465  0.0116             Yes\n",
+       "10  Positive  15-20% inflation -0.0036  0.0486              No\n",
+       "11  Positive    20+% inflation  0.0193  0.0654              No"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Let's do a table of effects! \n",
+    "\n",
+    "outcomes = ['durable_purchase_0','durable_purchase_1','durable_purchase_2']\n",
+    "treatments = treatment_vars[1:-1]\n",
+    "\n",
+    "estimates = pd.DataFrame(columns={'outcome':'','treatment':'','ATE':0.0,'std':0.0})\n",
+    "for outcome in outcomes:\n",
+    "    for treatment in treatments:\n",
+    "        data_and_nuisance_estimates_xgb = pd.DataFrame(\n",
+    "            {'g': g_cond[:,int(treatment[-3])], 'Q_control': Q0[:,int(outcome[-1])], 'Q_treat': Q1[:,int(outcome[-1])],\n",
+    "            'A': data_xgboost[treatment], 'Y': data_xgboost[outcome]})\n",
+    "        tau_hat, std_hat = ate_aiptw(**data_and_nuisance_estimates_xgb)\n",
+    "        #estimates.loc[estimates['outcome']=='',:] = [outcome,treatment,tau_hat,std_hat]\n",
+    "        estimates = estimates.append({\n",
+    "            'outcome':outcome,'treatment':treatment,'ATE':round(tau_hat,4),'std':round(std_hat,4)},\n",
+    "            ignore_index=True)\n",
+    "\n",
+    "estimates['95% significant'] = np.where(abs(estimates['ATE']) > 1.96*estimates['std'], 'Yes', 'No')\n",
+    "# calculate p-values (two-tailed)\n",
+    "estimates['p-value'] = 2*(1 - norm.cdf(abs(estimates['ATE']/estimates['std'])))\n",
+    "\n",
+    "estimates.replace(to_replace={\n",
+    "    'durable_purchase_0':'Negative',\n",
+    "    'durable_purchase_1':'Neutral',\n",
+    "    'durable_purchase_2':'Positive',\n",
+    "    'treatment_bins_1.0':'5-10% inflation',\n",
+    "    'treatment_bins_2.0':'10-15% inflation',\n",
+    "    'treatment_bins_3.0':'15-20% inflation',\n",
+    "    'treatment_bins_4.0':'20+% inflation'},\n",
+    "    inplace=True)\n",
+    "\n",
+    "estimates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The ATE AIPTW is 0.5450562132691283 with a std = 0.013722857142555106\n"
+      "The ATE AIPTW is -0.0256634274986595 with a std = 0.0036139236682537173\n"
      ]
     }
    ],
    "source": [
     "# Probably need to conditionalize the Q predictions too??\n",
+    "# 12/6 update: probably not actually\n",
     "\n",
     "# AIPW for Good for 10-15% inflation predictors compared to 0-5%, Q conditional\n",
-    "q0_cond = conditionalize_propensity_scores(Q0)\n",
-    "q1_cond = conditionalize_propensity_scores(Q1)\n",
+    "q0_cond = conditionalize_on_column(Q0)\n",
+    "q1_cond = conditionalize_on_column(Q1)\n",
     "data_and_nuisance_estimates_xgb = pd.DataFrame(\n",
     "    {'g': g_cond[:,1], 'Q_control': q0_cond[:,2], 'Q_treat': q1_cond[:,2],\n",
-    "    'A': data_xgboost[\"treatment_bins\"], 'Y': data_xgboost[\"durable_purchase\"]})\n",
+    "    'A': data_xgboost[\"treatment_bins_1.0\"], 'Y': data_xgboost[\"durable_purchase_2\"]})\n",
     "tau_hat, std_hat = ate_aiptw(**data_and_nuisance_estimates_xgb)\n",
     "print(f\"The ATE AIPTW is {tau_hat} with a std = {std_hat}\")\n"
    ]
