--- a/models.ipynb
+++ b/models.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,6 +28,7 @@
     "from data_utils import read_data, prep_features, evaluate_predictions, rebin_outcome, summarize_predictions, evaluate_multilevel_predictions\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "from scipy.stats import norm\n",
     "\n",
     "# set random seed for numpy\n",
     "RANDOM_SEED=69\n",
@@ -1453,47 +1454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['durable_purchase_0', 'durable_purchase_1', 'durable_purchase_2']"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[outcome for outcome in outcomes]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['0', '1', '2']"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[outcome[-1] for outcome in outcomes]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1522,6 +1483,7 @@
        "      <th>ATE</th>\n",
        "      <th>std</th>\n",
        "      <th>95% significant</th>\n",
+       "      <th>p-value</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1532,6 +1494,7 @@
        "      <td>0.0213</td>\n",
        "      <td>0.0034</td>\n",
        "      <td>Yes</td>\n",
+       "      <td>3.735297e-10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1540,6 +1503,7 @@
        "      <td>0.0556</td>\n",
        "      <td>0.0115</td>\n",
        "      <td>Yes</td>\n",
+       "      <td>1.332912e-06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1548,6 +1512,7 @@
        "      <td>-0.0002</td>\n",
        "      <td>0.0448</td>\n",
        "      <td>No</td>\n",
+       "      <td>9.964380e-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1556,6 +1521,7 @@
        "      <td>-0.0068</td>\n",
        "      <td>0.0653</td>\n",
        "      <td>No</td>\n",
+       "      <td>9.170624e-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1564,6 +1530,7 @@
        "      <td>0.0023</td>\n",
        "      <td>0.0017</td>\n",
        "      <td>No</td>\n",
+       "      <td>1.760744e-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -1572,6 +1539,7 @@
        "      <td>-0.0091</td>\n",
        "      <td>0.0038</td>\n",
        "      <td>Yes</td>\n",
+       "      <td>1.663230e-02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -1580,6 +1548,7 @@
        "      <td>0.0038</td>\n",
        "      <td>0.0248</td>\n",
        "      <td>No</td>\n",
+       "      <td>8.782202e-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -1588,6 +1557,7 @@
        "      <td>-0.0124</td>\n",
        "      <td>0.0088</td>\n",
        "      <td>No</td>\n",
+       "      <td>1.588083e-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -1596,6 +1566,7 @@
        "      <td>-0.0236</td>\n",
        "      <td>0.0036</td>\n",
        "      <td>Yes</td>\n",
+       "      <td>5.543511e-11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -1604,6 +1575,7 @@
        "      <td>-0.0465</td>\n",
        "      <td>0.0116</td>\n",
        "      <td>Yes</td>\n",
+       "      <td>6.107442e-05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -1612,6 +1584,7 @@
        "      <td>-0.0036</td>\n",
        "      <td>0.0486</td>\n",
        "      <td>No</td>\n",
+       "      <td>9.409514e-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -1620,28 +1593,29 @@
        "      <td>0.0193</td>\n",
        "      <td>0.0654</td>\n",
        "      <td>No</td>\n",
+       "      <td>7.679121e-01</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     outcome         treatment     ATE     std 95% significant\n",
-       "0   Negative   5-10% inflation  0.0213  0.0034             Yes\n",
-       "1   Negative  10-15% inflation  0.0556  0.0115             Yes\n",
-       "2   Negative  15-20% inflation -0.0002  0.0448              No\n",
-       "3   Negative    20+% inflation -0.0068  0.0653              No\n",
-       "4    Neutral   5-10% inflation  0.0023  0.0017              No\n",
-       "5    Neutral  10-15% inflation -0.0091  0.0038             Yes\n",
-       "6    Neutral  15-20% inflation  0.0038  0.0248              No\n",
-       "7    Neutral    20+% inflation -0.0124  0.0088              No\n",
-       "8   Positive   5-10% inflation -0.0236  0.0036             Yes\n",
-       "9   Positive  10-15% inflation -0.0465  0.0116             Yes\n",
-       "10  Positive  15-20% inflation -0.0036  0.0486              No\n",
-       "11  Positive    20+% inflation  0.0193  0.0654              No"
+       "     outcome         treatment     ATE     std 95% significant       p-value\n",
+       "0   Negative   5-10% inflation  0.0213  0.0034             Yes  3.735297e-10\n",
+       "1   Negative  10-15% inflation  0.0556  0.0115             Yes  1.332912e-06\n",
+       "2   Negative  15-20% inflation -0.0002  0.0448              No  9.964380e-01\n",
+       "3   Negative    20+% inflation -0.0068  0.0653              No  9.170624e-01\n",
+       "4    Neutral   5-10% inflation  0.0023  0.0017              No  1.760744e-01\n",
+       "5    Neutral  10-15% inflation -0.0091  0.0038             Yes  1.663230e-02\n",
+       "6    Neutral  15-20% inflation  0.0038  0.0248              No  8.782202e-01\n",
+       "7    Neutral    20+% inflation -0.0124  0.0088              No  1.588083e-01\n",
+       "8   Positive   5-10% inflation -0.0236  0.0036             Yes  5.543511e-11\n",
+       "9   Positive  10-15% inflation -0.0465  0.0116             Yes  6.107442e-05\n",
+       "10  Positive  15-20% inflation -0.0036  0.0486              No  9.409514e-01\n",
+       "11  Positive    20+% inflation  0.0193  0.0654              No  7.679121e-01"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1664,9 +1638,9 @@
     "            'outcome':outcome,'treatment':treatment,'ATE':round(tau_hat,4),'std':round(std_hat,4)},\n",
     "            ignore_index=True)\n",
     "\n",
-    "estimates['95% significant'] = np.where(abs(estimates['ATE']) > 1.96*estimates['std'], 'Yes', 'No')\n",
     "# calculate p-values (two-tailed)\n",
-    "estimates['p-value'] = 2*(1 - norm.cdf(abs(estimates['ATE']/estimates['std'])))\n",
+    "estimates['p-value'] = 2*(norm.sf(abs(estimates['ATE']/estimates['std'])))\n",
+    "estimates['95% significant'] = np.where(abs(estimates['ATE']) > 1.96*estimates['std'], 'Yes', 'No')\n",
     "\n",
     "estimates.replace(to_replace={\n",
     "    'durable_purchase_0':'Negative',\n",
