--- a/models.ipynb
+++ b/models.ipynb
@@ -1207,30 +1207,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Conditional outcome models (Q models)\n",
-    "def make_Q_model():\n",
+    "def make_Q_model(model_type):\n",
     "    ''' A function that returns a general ML q model for later use in k-folding'''\n",
-    "    return xgb.XGBClassifier(eval_metric = 'mlogloss')\n",
+    "    if model_type == 'fast':\n",
+    "        return xgb.XGBClassifier(eval_metric = 'mlogloss'), 2\n",
+    "    else:\n",
+    "        return xgb.XGBClassifier(\n",
+    "            eval_metric = 'mlogloss',learning_rate=0.05,max_depth=5,n_estimators=150,min_child_weight=3), 5\n",
     "\n",
     "\n",
     "# Propensity score models (g models)\n",
-    "def make_g_model():\n",
+    "def make_g_model(model_type):\n",
     "    ''' A function that returns a g model for computing propensity scores'''\n",
-    "    return xgb.XGBClassifier(eval_metric = 'mlogloss')"
+    "    if model_type == 'fast':\n",
+    "        return xgb.XGBClassifier(eval_metric = 'mlogloss'), 2\n",
+    "    else:\n",
+    "        return xgb.XGBClassifier(\n",
+    "            eval_metric = 'mlogloss',learning_rate=0.07,max_depth=6,n_estimators=120,min_child_weight=1), 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Functions for K-fold cross-fitting\n",
-    "def treatment_k_fold_fit_and_predict(make_model, X:pd.DataFrame, A:np.array, n_splits:int):\n",
+    "def treatment_k_fold_fit_and_predict(X:pd.DataFrame, A:np.array, model_type='slow'):\n",
     "    '''\n",
     "    Implements K fold cross-fitting for the model predicting the treatment A. \n",
     "    That is, \n",
@@ -1246,6 +1254,8 @@
     "    n_splits: number of splits to use\n",
     "    '''\n",
     "\n",
+    "    make_model, n_splits = make_g_model(model_type)\n",
+    "\n",
     "    predictions = np.empty((len(X),5), dtype=float)  # row per obs, col per treatment bin\n",
     "    kf = StratifiedKFold(n_splits=n_splits, shuffle=True, random_state=RANDOM_SEED)\n",
     "\n",
@@ -1253,7 +1263,7 @@
     "    for train_index, test_index in kf.split(X, A):\n",
     "        X_train = X.iloc[train_index]\n",
     "        A_train = A.iloc[train_index]\n",
-    "        g = make_model()\n",
+    "        g = make_model\n",
     "        g.fit(X_train, A_train)\n",
     "        \n",
     "        # get predictions for split\n",
@@ -1272,7 +1282,8 @@
     "    return g_cond\n",
     "\n",
     "\n",
-    "def outcome_k_fold_fit_and_predict(make_model, X:pd.DataFrame, y:np.array, A:pd.DataFrame, n_splits:int, output_type:str):\n",
+    "def outcome_k_fold_fit_and_predict(\n",
+    "    X:pd.DataFrame, y:np.array, A:pd.DataFrame, model_type='slow', output_type='categorical'):\n",
     "    '''\n",
     "    Implements K fold cross-fitting for the model predicting the outcome Y. \n",
     "    That is, \n",
@@ -1286,9 +1297,10 @@
     "    X: dataframe of variables to adjust for\n",
     "    y: array of outcomes\n",
     "    A: array of treatments\n",
-    "    n_splits: number of splits to use\n",
     "    output_type: type of outcome, \"categorical\" or \"continuous\"\n",
     "    '''\n",
+    "\n",
+    "    make_model, n_splits = make_Q_model(model_type)\n",
     "\n",
     "    # initialize: row per obs, col per outcome\n",
     "    predictions0 = np.empty((len(X),3), dtype=float)\n",
@@ -1322,7 +1334,7 @@
     "    for train_index, test_index in kf.split(X_w_treatment, np.transpose(y)):\n",
     "        X_train = X_w_treatment.iloc[train_index]\n",
     "        y_train = y.iloc[train_index]\n",
-    "        q = make_Q_model()\n",
+    "        q = make_model\n",
     "        q.fit(X_train, y_train)\n",
     "\n",
     "        if output_type =='categorical':\n",
@@ -1359,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1377,7 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1393,13 +1405,31 @@
     "# Fit Q(A,X) model\n",
     "# get conditional outcomes\n",
     "Q0, Q1, Q2, Q3, Q4 = outcome_k_fold_fit_and_predict(\n",
-    "    make_Q_model, X=data_xgboost[confounder_vars], y=data_xgboost[\"durable_purchase\"], \n",
-    "    A=data_xgboost[treatment_vars[:-1]], n_splits=2, output_type=\"categorical\")"
+    "    X=data_xgboost[confounder_vars], y=data_xgboost[\"durable_purchase\"], A=data_xgboost[treatment_vars[:-1]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/drewkeller/opt/anaconda3/envs/stats/lib/python3.8/site-packages/xgboost/sklearn.py:888: UserWarning: The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
+      "  warnings.warn(label_encoder_deprecation_msg, UserWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# example \"fast\" run\n",
+    "g_fast = treatment_k_fold_fit_and_predict(X=data_xgboost[confounder_vars], A=data_xgboost[\"treatment_bins\"],model_type='fast')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1413,12 +1443,12 @@
    ],
    "source": [
     "# Fit g(x) model\n",
-    "g = treatment_k_fold_fit_and_predict(make_g_model, X=data_xgboost[confounder_vars], A=data_xgboost[\"treatment_bins\"], n_splits=2)"
+    "g = treatment_k_fold_fit_and_predict(X=data_xgboost[confounder_vars], A=data_xgboost[\"treatment_bins\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1427,34 +1457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The ATE AIPTW is -0.023626239510519963 with a std = 0.0036096220668234516\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Need to select the desired column of the Q predictions! ie one of {0,1,2}\n",
-    "# Need to select the desired column of the g_cond predictions! ie one of {1,2,3,4} (don't use 0! it's untreated)\n",
-    "\n",
-    "# AIPW for Good for 5-10% inflation predictors compared to 0-5%\n",
-    "data_and_nuisance_estimates_xgb = pd.DataFrame(\n",
-    "    {'g': g_cond[:,1], 'Q_control': Q0[:,2], 'Q_treat': Q1[:,2],\n",
-    "    'A': data_xgboost[\"treatment_bins_1.0\"], 'Y': data_xgboost[\"durable_purchase_2\"]})\n",
-    "tau_hat, std_hat = ate_aiptw(**data_and_nuisance_estimates_xgb)\n",
-    "print(f\"The ATE AIPTW is {tau_hat} with a std = {std_hat}\")\n",
-    "\n",
-    "# Pre-Wesley's changes 12/6: The ATE AIPTW is 0.5910816442549504 with a std = 0.015243537827750696"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1482,8 +1485,8 @@
        "      <th>treatment</th>\n",
        "      <th>ATE</th>\n",
        "      <th>std</th>\n",
-       "      <th>95% significant</th>\n",
        "      <th>p-value</th>\n",
+       "      <th>95% significant</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1491,131 +1494,131 @@
        "      <th>0</th>\n",
        "      <td>Negative</td>\n",
        "      <td>5-10% inflation</td>\n",
-       "      <td>0.0213</td>\n",
-       "      <td>0.0034</td>\n",
+       "      <td>0.0221</td>\n",
+       "      <td>0.0028</td>\n",
+       "      <td>2.953456e-15</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>3.735297e-10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Negative</td>\n",
        "      <td>10-15% inflation</td>\n",
-       "      <td>0.0556</td>\n",
-       "      <td>0.0115</td>\n",
+       "      <td>0.0413</td>\n",
+       "      <td>0.0058</td>\n",
+       "      <td>1.073884e-12</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>1.332912e-06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Negative</td>\n",
        "      <td>15-20% inflation</td>\n",
-       "      <td>-0.0002</td>\n",
-       "      <td>0.0448</td>\n",
-       "      <td>No</td>\n",
-       "      <td>9.964380e-01</td>\n",
+       "      <td>0.0411</td>\n",
+       "      <td>0.0078</td>\n",
+       "      <td>1.369966e-07</td>\n",
+       "      <td>Yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Negative</td>\n",
        "      <td>20+% inflation</td>\n",
-       "      <td>-0.0068</td>\n",
-       "      <td>0.0653</td>\n",
-       "      <td>No</td>\n",
-       "      <td>9.170624e-01</td>\n",
+       "      <td>0.0234</td>\n",
+       "      <td>0.0056</td>\n",
+       "      <td>2.933459e-05</td>\n",
+       "      <td>Yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Neutral</td>\n",
        "      <td>5-10% inflation</td>\n",
-       "      <td>0.0023</td>\n",
-       "      <td>0.0017</td>\n",
-       "      <td>No</td>\n",
-       "      <td>1.760744e-01</td>\n",
+       "      <td>0.0032</td>\n",
+       "      <td>0.0014</td>\n",
+       "      <td>2.227098e-02</td>\n",
+       "      <td>Yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Neutral</td>\n",
        "      <td>10-15% inflation</td>\n",
-       "      <td>-0.0091</td>\n",
-       "      <td>0.0038</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>1.663230e-02</td>\n",
+       "      <td>0.0003</td>\n",
+       "      <td>0.0024</td>\n",
+       "      <td>9.005236e-01</td>\n",
+       "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>Neutral</td>\n",
        "      <td>15-20% inflation</td>\n",
-       "      <td>0.0038</td>\n",
-       "      <td>0.0248</td>\n",
+       "      <td>0.0006</td>\n",
+       "      <td>0.0030</td>\n",
+       "      <td>8.414806e-01</td>\n",
        "      <td>No</td>\n",
-       "      <td>8.782202e-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>Neutral</td>\n",
        "      <td>20+% inflation</td>\n",
-       "      <td>-0.0124</td>\n",
-       "      <td>0.0088</td>\n",
+       "      <td>0.0031</td>\n",
+       "      <td>0.0024</td>\n",
+       "      <td>1.964726e-01</td>\n",
        "      <td>No</td>\n",
-       "      <td>1.588083e-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>Positive</td>\n",
        "      <td>5-10% inflation</td>\n",
-       "      <td>-0.0236</td>\n",
-       "      <td>0.0036</td>\n",
+       "      <td>-0.0253</td>\n",
+       "      <td>0.0030</td>\n",
+       "      <td>3.359560e-17</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>5.543511e-11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>Positive</td>\n",
        "      <td>10-15% inflation</td>\n",
-       "      <td>-0.0465</td>\n",
-       "      <td>0.0116</td>\n",
+       "      <td>-0.0416</td>\n",
+       "      <td>0.0060</td>\n",
+       "      <td>4.110381e-12</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>6.107442e-05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>Positive</td>\n",
        "      <td>15-20% inflation</td>\n",
-       "      <td>-0.0036</td>\n",
-       "      <td>0.0486</td>\n",
-       "      <td>No</td>\n",
-       "      <td>9.409514e-01</td>\n",
+       "      <td>-0.0417</td>\n",
+       "      <td>0.0079</td>\n",
+       "      <td>1.302592e-07</td>\n",
+       "      <td>Yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>Positive</td>\n",
        "      <td>20+% inflation</td>\n",
-       "      <td>0.0193</td>\n",
-       "      <td>0.0654</td>\n",
-       "      <td>No</td>\n",
-       "      <td>7.679121e-01</td>\n",
+       "      <td>-0.0265</td>\n",
+       "      <td>0.0058</td>\n",
+       "      <td>4.901374e-06</td>\n",
+       "      <td>Yes</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     outcome         treatment     ATE     std 95% significant       p-value\n",
-       "0   Negative   5-10% inflation  0.0213  0.0034             Yes  3.735297e-10\n",
-       "1   Negative  10-15% inflation  0.0556  0.0115             Yes  1.332912e-06\n",
-       "2   Negative  15-20% inflation -0.0002  0.0448              No  9.964380e-01\n",
-       "3   Negative    20+% inflation -0.0068  0.0653              No  9.170624e-01\n",
-       "4    Neutral   5-10% inflation  0.0023  0.0017              No  1.760744e-01\n",
-       "5    Neutral  10-15% inflation -0.0091  0.0038             Yes  1.663230e-02\n",
-       "6    Neutral  15-20% inflation  0.0038  0.0248              No  8.782202e-01\n",
-       "7    Neutral    20+% inflation -0.0124  0.0088              No  1.588083e-01\n",
-       "8   Positive   5-10% inflation -0.0236  0.0036             Yes  5.543511e-11\n",
-       "9   Positive  10-15% inflation -0.0465  0.0116             Yes  6.107442e-05\n",
-       "10  Positive  15-20% inflation -0.0036  0.0486              No  9.409514e-01\n",
-       "11  Positive    20+% inflation  0.0193  0.0654              No  7.679121e-01"
+       "     outcome         treatment     ATE     std       p-value 95% significant\n",
+       "0   Negative   5-10% inflation  0.0221  0.0028  2.953456e-15             Yes\n",
+       "1   Negative  10-15% inflation  0.0413  0.0058  1.073884e-12             Yes\n",
+       "2   Negative  15-20% inflation  0.0411  0.0078  1.369966e-07             Yes\n",
+       "3   Negative    20+% inflation  0.0234  0.0056  2.933459e-05             Yes\n",
+       "4    Neutral   5-10% inflation  0.0032  0.0014  2.227098e-02             Yes\n",
+       "5    Neutral  10-15% inflation  0.0003  0.0024  9.005236e-01              No\n",
+       "6    Neutral  15-20% inflation  0.0006  0.0030  8.414806e-01              No\n",
+       "7    Neutral    20+% inflation  0.0031  0.0024  1.964726e-01              No\n",
+       "8   Positive   5-10% inflation -0.0253  0.0030  3.359560e-17             Yes\n",
+       "9   Positive  10-15% inflation -0.0416  0.0060  4.110381e-12             Yes\n",
+       "10  Positive  15-20% inflation -0.0417  0.0079  1.302592e-07             Yes\n",
+       "11  Positive    20+% inflation -0.0265  0.0058  4.901374e-06             Yes"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1653,6 +1656,32 @@
     "    inplace=True)\n",
     "\n",
     "estimates"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_Some old stuff keeping just in case for now - delete later_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Need to select the desired column of the Q predictions! ie one of {0,1,2}\n",
+    "# Need to select the desired column of the g_cond predictions! ie one of {1,2,3,4} (don't use 0! it's untreated)\n",
+    "\n",
+    "# AIPW for Good for 5-10% inflation predictors compared to 0-5%\n",
+    "data_and_nuisance_estimates_xgb = pd.DataFrame(\n",
+    "    {'g': g_cond[:,1], 'Q_control': Q0[:,2], 'Q_treat': Q1[:,2],\n",
+    "    'A': data_xgboost[\"treatment_bins_1.0\"], 'Y': data_xgboost[\"durable_purchase_2\"]})\n",
+    "tau_hat, std_hat = ate_aiptw(**data_and_nuisance_estimates_xgb)\n",
+    "print(f\"The ATE AIPTW is {tau_hat} with a std = {std_hat}\")\n",
+    "\n",
+    "# Pre-Wesley's changes 12/6: The ATE AIPTW is 0.5910816442549504 with a std = 0.015243537827750696"
    ]
   },
   {
