model work cont

--- a/models.ipynb
+++ b/models.ipynb
@@ -1423,8 +1423,8 @@
     }
    ],
    "source": [
-    "# example \"fast\" run\n",
-    "g_fast = treatment_k_fold_fit_and_predict(X=data_xgboost[confounder_vars], A=data_xgboost[\"treatment_bins\"],model_type='fast')"
+    "# EXAMPLE: can use \"fast\" model_type option for either Q or g to run MUCH faster but with worse model (and only two folds)\n",
+    "g_fast = treatment_k_fold_fit_and_predict(X=data_xgboost[confounder_vars], A=data_xgboost[\"treatment_bins\"], model_type='fast')"
    ]
   },
   {
