--- a/models.ipynb
+++ b/models.ipynb
@@ -4886,7 +4886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -4904,7 +4904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -4912,7 +4912,9 @@
      "output_type": "stream",
      "text": [
       "/Users/drewkeller/opt/anaconda3/envs/stats/lib/python3.8/site-packages/xgboost/sklearn.py:888: UserWarning: The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
-      "  warnings.warn(label_encoder_deprecation_msg, UserWarning)\n"
+      "  warnings.warn(label_encoder_deprecation_msg, UserWarning)\n",
+      "/Users/drewkeller/opt/anaconda3/envs/stats/lib/python3.8/site-packages/xgboost/data.py:192: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
+      "  from pandas import MultiIndex, Int64Index\n"
      ]
     }
    ],
@@ -4946,7 +4948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4994,6 +4996,27 @@
     "# check overlap (repeated for each treatment)\n",
     "plt.hist(g_cond[:,1],bins=100)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ate_g(Q_control, Q_treat, g, A, Y, prob_t=None):\n",
+    "    \"\"\"Propensity score estimator for the ATE\"\"\"\n",
+    "\n",
+    "    n = Y.shape[0]\n",
+    "    tau_hat = (A*Y/g - (1-A)*Y/(1-g)).mean()\n",
+    "    return tau_hat\n",
+    "\n",
+    "def ate_q(Q_control, Q_treat, g, A, Y, prob_t=None):\n",
+    "    \"\"\"Outcome estimator for the ATE\"\"\"\n",
+    "\n",
+    "    n = Y.shape[0]\n",
+    "    tau_hat = (Q_treat - Q_control).mean()\n",
+    "    return tau_hat"
    ]
   },
   {
